chromium/pages/popup/style.css
html {
  background-color: #fff
}

body {
  cursor: default;
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 0;
  margin-bottom: 0;
  min-width: 20em;
  font-family: 'Lucida Grande', 'Segoe UI', Tahoma, 'DejaVu Sans', Arial, sans-serif;
  font-size: 75%;
  color: #303942;
}

p {
  line-height: 1.8em;
}

h1, h2, h3 {
  user-select: none;
  font-weight: normal;
  line-height: 1;
}

h1 {
  font-size: 1.5em;
}

h2 {
  font-size: 1.3em;
  margin-bottom: 0.4em;
}

h3 {
  color: black;
  font-size: 1.2em;
  margin-bottom: 0.8em;
}

a {
  color: #15c;
  text-decoration: underline;
}

a:active {
  color: #052577;
}

/* Don't wrap text for important stuff. */
h1, h2, h3, .rule {
  white-space: nowrap;
}

/* Hide rules & options if the extension is off. */
.disabled #RuleManagement,.disabled #HttpNowhere {
  display: none;
}

/* Initially hide section (until rules get added). */
section.rules {
  display: none;
}

.rule {
  height: 25px;
}

.rule label {
  padding: 0;
  max-width: 93%;
  overflow: hidden;
}

/* Underline rules that have notes. */
.rule [title] {
  border-bottom: 1px dotted;
  cursor: help;
}

input[type='checkbox'] {
  vertical-align: middle;
}

input[type='text'] {
  width: 100%;
  margin-top: 0.4em;
  margin-bottom: 0.4em;
}

.rule img.remove {
  float: right;
}

header {
  border-bottom: 1px solid #eee;
}

header > h1 {
  margin: 0;
  padding: 21px 0 13px;
}

section {
  padding-left: 18px;
  padding-top: 9px;
  padding-bottom: 9px;
}

section > h3 {
  margin-left: -18px;
}

footer {
  border-top: 1px solid #eee;
  margin-top: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

/* By default the "Add a rule" link is hidden. It's shown on HTTPS sites only. */
#add-rule-link {
  display: none;
}

#rulesets-versions{
  display: block;
  clear: both;
}

.rulesets-version{
  display: block;
}

